# ceia-vpc1-tps

./: README.md  pyproject.toml  tp1.ipynb
TP1/: tp1.ipynb
TP2/: tp1.ipynb  tp2.ipynb
TP3/: tp3.ipynb
